--- a/source/fallback-project/stylesheets/main.css.scss
+++ b/source/fallback-project/stylesheets/main.css.scss
@@ -26,6 +26,12 @@ p {
   margin: 2rem 0 0 0;
 }
 
+.small-break {
+  color: #798a95;
+  display: block;
+  line-height: 160%;
+}
+
 a {
   color: #00B256;
   text-decoration: none;
