updated fallback project

--- a/source/fallback-project/index.html.erb
+++ b/source/fallback-project/index.html.erb
@@ -161,7 +161,8 @@ layout: projects-layout
             </div>
 
             <div class="one-half column code-example">
-              <p><strong>Quick Resources</strong>:</p>
+              <p><strong>Resources</strong>:</p>
+              <span class="small-break"><a href="http://alistapart.com/article/taking-advantage-of-html5-and-css3-with-modernizr">A List Apart</a></span>
               <span class="small-break"><a href="http://modernizr.com/docs/">Modernizr Docs</a></span>
               <span class="small-break"><a href="http://html5please.com/">HTML5 Please</a></span>
             </div>
