added fallback project to portfolio

--- a/source/portfolio/index.html.erb
+++ b/source/portfolio/index.html.erb
@@ -57,6 +57,18 @@ layout: projects-layout
         <img class="project-image" src="images/alignment-project-ss.jpg">
 
         <div class="description">
+          <h2>Fallback Project</h2>
+          <p>Project that discuss how I structure new projects and how I handle fallbacks.</p>
+        </div>
+
+        <div class="link-holder">
+          <a href="../alignment-project/">View Project</a>
+        </div>
+      </li>
+      <li>
+        <img class="project-image" src="images/alignment-project-ss.jpg">
+
+        <div class="description">
           <h2>Alignment Project</h2>
           <p>Project demonstrating the importance of alignment in web design.</p>
         </div>
