updated link in fallback project

--- a/source/portfolio/index.html.erb
+++ b/source/portfolio/index.html.erb
@@ -62,7 +62,7 @@ layout: projects-layout
         </div>
 
         <div class="link-holder">
-          <a href="../alignment-project/">View Project</a>
+          <a href="../fallback-project/">View Project</a>
         </div>
       </li>
       <li>
