updated fallback project

--- a/source/fallback-project/index.html.erb
+++ b/source/fallback-project/index.html.erb
@@ -176,7 +176,7 @@ layout: projects-layout
             <div class="one-half column">
               <h3>next steps</h3>
               <p>If you haven't already done so, I recommend reading A List Apart's article on Modernizr, you can view that <a href="http://alistapart.com/article/taking-advantage-of-html5-and-css3-with-modernizr">here</a>.</p>
-              <p>Since you'll need to provide the fallbacks yourself, a great resource to look at is <a href="http://html5please.com/">HTML5 Please</a>. It documents the common HTML5 and CSS3 technologies that may require fallbacks, they also recommend the best ways to implement support either via fallbacks or pollyfils.</p>
+              <p>Since you'll need to provide the fallbacks yourself, a great resource to look at is <a href="http://html5please.com/">HTML5 Please</a>. It documents the common HTML5 and CSS3 technologies that may require fallbacks, they also recommend the best ways to implement support either via fallbacks or polyfills.</p>
             </div>
 
             <div class="one-half column code-example">
