added link to raw source code

--- a/source/fallback-project/index.html.erb
+++ b/source/fallback-project/index.html.erb
@@ -62,6 +62,7 @@ layout: projects-layout
 
             <div class="one-half column code-example">
               <script src="https://gist.github.com/nbatalla03/dfdae0a4e13d3036c314.js"></script>
+              <span class="small-break"><a href="https://gist.githubusercontent.com/nbatalla03/dfdae0a4e13d3036c314/raw/33d0adcee6e0b2889e33c7e51b2da27b87442cb1/gistfile1.html">View Raw</a></span>
             </div>
           </section>
         </li>
@@ -91,6 +92,7 @@ layout: projects-layout
 
             <div class="one-half column code-example">
               <script src="https://gist.github.com/nbatalla03/2e58ced68ab810d0bed7.js"></script>
+              <span class="small-break"><a href="https://gist.githubusercontent.com/nbatalla03/2e58ced68ab810d0bed7/raw/17480e6b3880d726044c2f4f1371df3df1a9a3a2/gistfile1.css">View Raw</a></span>
             </div>
           </section>
         </li>
