changed title of page

--- a/source/fallback-project/index.html.erb
+++ b/source/fallback-project/index.html.erb
@@ -8,7 +8,7 @@ layout: projects-layout
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Setup & Fallback Project</title>
+    <title>Structure & Fallback Project</title>
     <%= stylesheet_link_tag 'normalize' %>
     <link href="./stylesheets/main.css" media="screen" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="//use.typekit.net/lqb2ptd.js"></script>
