--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,7 +6,7 @@ per_page: 10
   <%= image_tag 'avatar.jpg', :class => 'avatar' %>
   <p>Hi, my name is</p>
   <p><strong>Nelsol Batalla!</strong></p>
-  <p>I'm a UX Apprentice</p>
+  <p>I'm a UX Craftsman</p>
   <p>at 8th Light.</p>
 
   <div class="project-list">
